# signoz-email-api

./: .env.example  Dockerfile  app.py  docker-compose.yml  pyproject.toml
app/: main.py
services/: AuthService.py  EmailService.py
utils/: email.py  utils.py
